Cambiando tamaño y color al nombre de los accesorios

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                             <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
                         </div>
                         <div class="accesorio-tipo">
-                            <h3>Cargador Lenovo Serie G-40</h3>
+                            <h3>Car. Lenovo Serie G-40</h3>
                             <img src="assets/img/ArticulosChina/cargadorLenovo/2.jpg" alt="" />
                             <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
                         </div>
@@ -246,24 +246,24 @@
                     </div>
                     <div class="accesorio">
                         <div class="accesorio-tipo">
-                            <h3>C&oacute;mo programar en Java</h3>
-                            <img src="assets/img/books/1.jpeg" alt="Cómo programar en Java" />
+                            <h3>Programación Java</h3>
+                            <img src="assets/img/books/1.jpeg" alt="" title="Antena TP-Link USB wifi" />
                             <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
                         </div>
                         <div class="accesorio-tipo">
-                            <h3>Fundamentos de Circuitos el&eacute;ctricos</h3>
-                            <img src="assets/img/books/2.jpeg" alt="Fundamentos de Circuitos eléctricos" />
+                            <h3>Circuitos eléctricos</h3>
+                            <img src="assets/img/books/2.jpeg" alt="" />
                             <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
                         </div>
                         <div class="accesorio-tipo">
-                            <h3>Electricidad y Electr&oacute;nica</h3>
-                            <img src="assets/img/books/3.jpeg" alt="Electricidad y Electrónica" />
-                            <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
+                            <h3>Electrónica y Electricidad</h3>
+                            <img src="assets/img/books/3.jpeg" alt="" />
+                            <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
                         </div>
                         <div class="accesorio-tipo">
-                            <h3>F&iacute;sica Vol 1</h3>
-                            <img src="assets/img/books/4.jpeg" alt="Fisica Vol 1" />
-                            <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
+                            <h3>Física Vol. 1</h3>
+                            <img src="assets/img/books/fisica.png" alt="" />
+                            <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
                         </div>
                     </div>
                 </section>
@@ -383,7 +383,6 @@
                 </section>
             </section>
         </section>
-
     </main>
 
     <footer>
