--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
     </header>
 
     <main class="contenido">
+        <section class="contenido__anuncios">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, aspernatur illum! Officia excepturi, ab hic facere, quasi optio alias dolores repellat numquam eum obcaecati animi ducimus! Ratione quidem laborum saepe.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, aspernatur illum! Officia excepturi, ab hic facere, quasi optio alias dolores repellat numquam eum obcaecati animi ducimus! Ratione quidem laborum saepe.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, aspernatur illum! Officia excepturi, ab hic facere, quasi optio alias dolores repellat numquam eum obcaecati animi ducimus! Ratione quidem laborum saepe.</p>
+        </section>
         <section class="contenido__comercio">
             <section class="logo">
                 <img src="assets/img/Logo.png" alt="Logo de la tienda" />
@@ -81,33 +86,20 @@
             <section class="presentacion">
                 <section class="slider">
                     <div class="slides">
-                        <input type="radio" name="radio-btn" id="radio1" />
-                        <!-- <input type="radio" name="radio-btn" id="radio2">
-                        <input type="radio" name="radio-btn" id="radio3">
-                        <input type="radio" name="radio-btn" id="radio4"> -->
+                        <!-- <input type="radio" name="radio-btn" id="radio1" /> -->
+                        <!-- <input type="radio" name="radio-btn" id="radio2"> -->
+
+                        <!-- <input type="radio" name="radio-btn" id="radio3">
+                        <input type="radio" name="radio-btn" id="radio4">  -->
 
                         <div class="slide first">
                             <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación" />
-
-                            <!-- control de anuncios -->
-                            <div class="navigation-auto">
-                                <div class="auto-btn1"></div>
-                                <!-- <div class="auto-btn2"></div>
-                                <div class="auto-btn3"></div>
-                                <div class="auto-btn4"></div> -->
-                            </div>
-
-                            <div class="navigation-manual">
-                                <label for="radio1" class="manual-btn"></label>
-                                <!-- <label for="radio2" class="manual-btn"></label>
-                                <label for="radio3" class="manual-btn"></label>
-                                <label for="radio4" class="manual-btn"></label> -->
-                            </div>
                         </div>
 
-                        <!-- <div class="slide">
-                            <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
+                        <div class="slide">
+                            <!-- <video src="assets/img/presentacion/frontend.mp4"></video> -->
                         </div>
+                        <!-- 
                         <div class="slide">
                             <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
                         </div>
@@ -115,27 +107,21 @@
                             <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
                         </div> -->
 
-                        <!-- <div class="navigation-auto">
-                            <div class="auto-btn1"></div> -->
-                        <!-- <div class="auto-btn2"></div>
+                        <div class="navigation-auto">
+                            <div class="auto-btn1"></div>
+                            <div class="auto-btn2"></div>
                             <div class="auto-btn3"></div>
-                            <div class="auto-btn4"></div> -->
-                    </div>
+                            <div class="auto-btn4"></div>
+                        </div>
 
-                    <!-- <div class="navigation-manual">
-                            <label for="radio1" class="manual-btn"></label> -->
-                    <!-- <label for="radio2" class="manual-btn"></label>
+                        <div class="navigation-manual">
+                            <label for="radio1" class="manual-btn"></label>
+                            <label for="radio2" class="manual-btn"></label>
                             <label for="radio3" class="manual-btn"></label>
-                            <label for="radio4" class="manual-btn"></label> -->
-                    </div>
+                            <label for="radio4" class="manual-btn"></label>
+                        </div>
                     </div>
                 </section>
-            </section>
-
-            <section class="contenido__anuncios">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, aspernatur illum! Officia excepturi, ab hic facere, quasi optio alias dolores repellat numquam eum obcaecati animi ducimus! Ratione quidem laborum saepe.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, aspernatur illum! Officia excepturi, ab hic facere, quasi optio alias dolores repellat numquam eum obcaecati animi ducimus! Ratione quidem laborum saepe.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, aspernatur illum! Officia excepturi, ab hic facere, quasi optio alias dolores repellat numquam eum obcaecati animi ducimus! Ratione quidem laborum saepe.</p>
             </section>
 
             <section class="mi_trabajo">
@@ -383,6 +369,8 @@
                 </section>
             </section>
         </section>
+
+
     </main>
 
     <footer>
