Colocando enlace de página principal al logo

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <body>
     <i class="icon-menu burger-button" id="burger-menu"></i>
 
+
     <header class="header">
         <div id="menu-h">
             <ul>
@@ -75,7 +76,10 @@
     <main class="contenido">
 
         <section class="logo">
-            <img src="assets/img/Logo.png" alt="Logo de la tienda" />
+
+            <a title="Logo de mi empresa" href="https://julianesp.github.io/mystore/" id="">
+                <img src="assets/img/Logo.png" alt="Logo" />
+            </a>
         </section>
 
         <section class="presentacion">
@@ -83,9 +87,8 @@
                 <div class="slides">
                     <input type="radio" name="radio-btn" id="radio1" />
                     <input type="radio" name="radio-btn" id="radio2">
-
-                    <!-- <input type="radio" name="radio-btn" id="radio3">
-                        <input type="radio" name="radio-btn" id="radio4">  -->
+                    <input type="radio" name="radio-btn" id="radio3">
+                    <input type="radio" name="radio-btn" id="radio4">
 
                     <div class="slide first">
                         <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación" />
@@ -95,13 +98,13 @@
                         <img src="assets/img/presentacion/park.jpg" alt="Imagen de presentación" />
                         <!-- <video src="assets/img/presentacion/frontend.mp4"></video> -->
                     </div>
-                    <!-- 
-                        <div class="slide">
-                            <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
-                        </div>
-                        <div class="slide">
-                            <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
-                        </div> -->
+
+                    <div class="slide">
+                        <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
+                    </div>
 
                     <div class="navigation-auto">
                         <div class="auto-btn1"></div>
@@ -192,7 +195,7 @@
                     </div>
                     <div class="accesorio-tipo">
                         <h3>Adaptador USB para WiFi</h3>
-                        <img src="assets/img/ArticulosCali/AdaptadorWifiUSB/2.png" alt="" />
+                        <img src="assets/img/ArticulosCali/AdaptadorWifiUSB/3.png" alt="" />
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
                     </div>
                     <div class="accesorio-tipo">
@@ -205,11 +208,6 @@
                         <img src="assets/img/ArticulosChina/Ratóninalámbrico/1.png" alt="" />
                         <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
                     </div>
-                    <!-- <div class="accesorio-pc">
-                            <h3>Mouse LogiTech al&aacute;mbrico</h3>
-                            <img src="assets/img/ArticulosCali/MouseM90/2.png" alt="">
-                            <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
-                        </div> -->
                     <div class="accesorio-tipo">
                         <h3>Router TP-Link WR840</h3>
                         <img src="assets/img/ArticulosCali/RouterTP-LinkWR840/1.png" alt="" />
@@ -402,7 +400,7 @@
         </div>
     </footer>
 
-    <script src="js/animations.js"></script>
+    <script src="./js/animations.js"></script>
 
 </body>
 
