Acomodando tamaño de imágenes de presentación

--- a/index.html
+++ b/index.html
@@ -94,15 +94,15 @@
                     </div>
 
                     <div class="slide">
-                        <img src="assets/img/presentacion/park.jpg" alt="Imagen de presentación" />
+                        <!-- <img src="assets/img/presentacion/park.jpg" alt="Imagen de presentación" /> -->
                         <!-- <video src="assets/img/presentacion/frontend.mp4"></video> -->
                     </div>
 
                     <div class="slide">
-                        <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
+                        <!-- <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación"> -->
                     </div>
                     <div class="slide">
-                        <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
+                        <!-- <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación"> -->
                     </div>
 
                     <div class="navigation-auto">
@@ -361,13 +361,13 @@
                 </div>
             </section>
         </section>
-
+        <!-- 
         <section class="contenido__anuncios">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, aspernatur illum! Officia excepturi, ab hic facere, quasi optio alias dolores repellat numquam eum obcaecati animi ducimus! Ratione quidem laborum saepe.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, aspernatur illum! Officia excepturi, ab hic facere, quasi optio alias dolores repellat numquam eum obcaecati animi ducimus! Ratione quidem laborum saepe.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, aspernatur illum! Officia excepturi, ab hic facere, quasi optio alias dolores repellat numquam eum obcaecati animi ducimus! Ratione quidem laborum saepe.</p>
-        </section>
-    </main>w
+        </section> -->
+    </main>
 
     <footer>
         <div class="info-desa">
