Agregando precio a los accesorios y enlace a la tienda de Wordpress para que puedan hacer el pago y el envío seguro

--- a/index.html
+++ b/index.html
@@ -164,38 +164,45 @@
                     <div class="accesorio-tipo">
                         <h3>Cable USB 3.0 extensor</h3>
                         <img src="assets/img/ArticulosChina/adaptadorusb/3.jpg" alt="" title="Antena TP-Link USB wifi" />
-                        <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
+                        <p>$52.000</p>
+                        <a href="https://julianesp.com/categoria-producto/accesorios/computador/?add-to-cart=129" rel="noopener" target="_blank">Comprar</a>
+
                     </div>
                     <div class="accesorio-tipo">
                         <h3>Car. Lenovo Serie G-40</h3>
                         <img src="assets/img/ArticulosChina/cargadorLenovo/2.jpg" alt="" />
-                        <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
+                        <p>$45.000</p>
+                        <a href="https://julianesp.com/categoria-producto/accesorios/computador/?add-to-cart=677" rel="noopener" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-tipo">
                         <h3>USB 3.0 16 gigas</h3>
                         <img src="assets/img/ArticulosChina/memoriausb3.0/1.png" alt="" />
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
+                        <p>$44.000</p>
+                        <a href="https://julianesp.com/categoria-producto/accesorios/computador/?add-to-cart=233" target="_blank" rel="noopener">Comprar</a>
                     </div>
                     <div class="accesorio-tipo">
                         <h3>Micr&oacute;fono</h3>
                         <img src="assets/img/ArticulosChina/Microfono/1.jpg" alt="" />
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
+                        <a href="https://julianesp.com/categoria-producto/accesorios/computador/?add-to-cart=262" target="_blank" rel="noopener">Comprar</a>
                     </div>
                     <div class="accesorio-tipo">
                         <h3>Memoria RAM 2gb</h3>
                         <img src="assets/img/ArticulosChina/ram2gb/ram3.JPG" alt="" />
-                        <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
+                        <p>$53.000</p>
+                        <a href="https://julianesp.com/categoria-producto/accesorios/computador/?add-to-cart=262" rel="noopener" target="_blank">Comprar</a>
                     </div>
 
                     <div class="accesorio-tipo">
                         <h3>Teclado Genius básico</h3>
                         <img src="assets/img/ArticulosChina/teclado/2.png" alt="" />
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
+                        <p>$45.000</p>
+                        <a href="https://julianesp.com/categoria-producto/accesorios/computador/?add-to-cart=194" target="_blank" rel="noopener">Comprar</a>
                     </div>
                     <div class="accesorio-tipo">
                         <h3>Adaptador USB para WiFi</h3>
                         <img src="assets/img/ArticulosCali/AdaptadorWifiUSB/3.png" alt="" />
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
+                        <p>$36.000</p>
+                        <a href="https://julianesp.com/categoria-producto/accesorios/computador/?add-to-cart=125" target="_blank" rel="noopener">Comprar</a>
                     </div>
                     <div class="accesorio-tipo">
                         <h3>Cargador port&aacute;til para celulares</h3>
@@ -210,12 +217,14 @@
                     <div class="accesorio-tipo">
                         <h3>Router TP-Link WR840</h3>
                         <img src="assets/img/ArticulosCali/RouterTP-LinkWR840/1.png" alt="" />
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                        <p>$83.000</p>
+                        <a href="https://julianesp.com/categoria-producto/accesorios/computador/?add-to-cart=81" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-tipo">
                         <h3>Router TP-Link WR940N</h3>
                         <img src="assets/img/ArticulosCali/RouterTP-LinkWR940N/1.png" alt="" />
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                        <p>$125.000</p>
+                        <a href="https://julianesp.com/categoria-producto/accesorios/computador/?add-to-cart=21" target="_blank">Comprar</a>
                     </div>
                 </div>
 
