Colocando hover a los precios

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                 <div class="accesorio">
                     <div class="accesorio-tipo">
                         <h3>Cable USB 3.0 extensor</h3>
+                        <p>Transfiere tus archivos a mayor velocidad</p>
                         <img src="assets/img/ArticulosChina/adaptadorusb/3.jpg" alt="" title="Antena TP-Link USB wifi" />
                         <p>$52.000</p>
                         <a href="https://julianesp.com/categoria-producto/accesorios/computador/?add-to-cart=129" rel="noopener" target="_blank">Comprar</a>
@@ -370,12 +371,7 @@
                 </div>
             </section>
         </section>
-        <!-- 
-        <section class="contenido__anuncios">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, aspernatur illum! Officia excepturi, ab hic facere, quasi optio alias dolores repellat numquam eum obcaecati animi ducimus! Ratione quidem laborum saepe.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, aspernatur illum! Officia excepturi, ab hic facere, quasi optio alias dolores repellat numquam eum obcaecati animi ducimus! Ratione quidem laborum saepe.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, aspernatur illum! Officia excepturi, ab hic facere, quasi optio alias dolores repellat numquam eum obcaecati animi ducimus! Ratione quidem laborum saepe.</p>
-        </section> -->
+
     </main>
 
     <footer>
