Agregando llave ssh

--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@
                 </div>
 
                 <!-- accesorios_computadores  -->
+                <!-- accesorios_computadores  -->
+
                 <div class="titulo" id="accesorios-laptop">
                     <h2>Accesorios para computadores</h2>
                 </div>
