Agregando llave SSH

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <i class="icon-menu burger-button" id="burger-menu"></i>
-    <!-- desde Ubuntu -->
+    <!-- desde Ubuntu agregando clave ssh -->
     <header class="header">
         <div id="menu-h">
             <ul>
